--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 td {
 	text-align: center;
 }
+
+.left_button {
+	position: fixed;
+	z-index: 9999;
+	width: 30px;
+	height: 200px;
+	overflow: hidden;
+	left: 0px;
+}
