--- a/style.css
+++ b/style.css
@@ -10,3 +10,23 @@ td {
 	overflow: hidden;
 	left: 0px;
 }
+
+.menu {
+	position: fixed;
+	width: 200px;
+	height: 200px;
+	left: 0px;
+	top: 70px;
+	display: none;
+}
+
+.menu_span {
+	position: fixed;
+	left: 20px;
+	top: 80px;
+	color: black;
+}
+
+span p {
+	font-size: 11;
+}
