--- a/style.css
+++ b/style.css
@@ -30,3 +30,19 @@ td {
 span p {
 	font-size: 11;
 }
+
+.main_table {
+	border: 2px;
+	text-align: center;
+	background: lightgray;
+}
+
+.status_bar {
+	display: none;
+	position:fixed;
+	width:100%;
+	background-color: #565051;
+	height:20px;
+	bottom:20px;
+	left: 0px;
+}
