--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ td {
 	position: fixed;
 }
 
-.500err {
+.500err_menu {
 	position: fixed;
 	z-index: 9999;
 	width: 30px;
@@ -18,6 +18,9 @@ td {
 	overflow: hidden;
 	left: 0px;
 	top: 20px;
+}
+
+.500err {
 	color: lightgray;
 }
 
