--- a/style.css
+++ b/style.css
@@ -37,25 +37,19 @@ td {
 	position: fixed;
 	width: 200px;
 	height: 250px;
-	left: 0px;
-	top: 70px;
+	left: 5px;
+	top: 75px;
 	display: none;
 	background-color: rgb(211, 211, 211);
 	border-collapse: separate;
 	border: solid 2px rgb(128, 128, 128);
-	border-collapse: separate;
 	-webkit-border-horizontal-spacing: 2px;
 	-webkit-border-vertical-spacing: 2px;
-}
-
-.menu_span {
-	position: fixed;
-	left: 20px;
-	top: 80px;
-	color: black;
-}
-
-span p {
+	border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 5px;
+	-khtml-border-radius: 10px;
+	padding: 10px;
 	font-size: 11;
 }
 
@@ -65,7 +59,6 @@ span p {
 	background-color: rgb(211, 211, 211);
 	border-collapse: separate;
 	border: solid 2px rgb(128, 128, 128);
-	border-top-width: 2px;
 	color: rgb(0, 0, 0);
 	display: table;
 	font-size: 16px;
