--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ td {
 
 .menu {
 	position: fixed;
-	width: 200px;
-	height: 250px;
+	width: 130px;
+	height: 230px;
 	left: 5px;
 	top: 75px;
 	display: none;
@@ -51,6 +51,11 @@ td {
 	-khtml-border-radius: 10px;
 	padding: 10px;
 	font-size: 11;
+	text-decoration: none;
+}
+
+.menu a {
+	text-decoration: none;
 }
 
 .main_table {
