--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ td {
 	text-decoration: none;
 }
 
-.main_table {
+table {
 	-webkit-border-horizontal-spacing: 2px;
 	-webkit-border-vertical-spacing: 2px;
 	background-color: rgb(211, 211, 211);
