--- a/style.css
+++ b/style.css
@@ -26,31 +26,21 @@ td {
 
 .left_button {
 	position: fixed;
-	z-index: 9999;
-	width: 30px;
-	height: 200px;
-	overflow: hidden;
-	left: 0px;
 }
 
 .menu {
 	position: fixed;
-	width: 130px;
-	height: 230px;
 	left: 5px;
 	top: 75px;
 	display: none;
 	background-color: rgb(211, 211, 211);
 	border-collapse: separate;
 	border: solid 2px rgb(128, 128, 128);
-	-webkit-border-horizontal-spacing: 2px;
-	-webkit-border-vertical-spacing: 2px;
 	border-radius: 6px;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 5px;
 	-khtml-border-radius: 10px;
 	padding: 10px;
-	font-size: 11;
 }
 
 .menu a {
@@ -63,27 +53,18 @@ td {
 	background-color: rgb(211, 211, 211);
 	border-collapse: separate;
 	border: solid 2px rgb(128, 128, 128);
-	color: rgb(0, 0, 0);
-	display: table;
-	font-size: 16px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: normal;
-	height: 650px;
 	line-height: normal;
-	text-align: start;
-	white-space: normal;
 	width: 492px;
 }
 
 .status_bar {
-	display: none;
-	position:fixed;
-	width:100%;
-	background-color: #565051;
-	height:20px;
-	bottom:20px;
-	left: 0px;
+	width: 492px;
+	background-color: lightgray;
+	height: 20px;
+	margin-left: auto;
+  	margin-right: auto;
+  	margin-top: 20px;
+
 }
 
 .username {
