--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ td {
 
 .editor {
 	background-color: lightgray;
+  	height: 450px;
+  	line-height: 1.2em;
 }
 
 .left_button {
@@ -65,6 +67,7 @@ td {
 	margin-left: auto;
   	margin-right: auto;
   	margin-top: 20px;
+  	color: white;
 
 }
 
