--- a/style.css
+++ b/style.css
@@ -81,8 +81,9 @@ td {
 	margin-left: auto;
   	margin-right: auto;
   	margin-top: 20px;
-  	color: white;
-
+  	color: red;
+	padding-left: 10px;
+  	font-weight: bold;
 }
 
 .username {
