--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ td {
 	-moz-border-radius: 5px;
 	-khtml-border-radius: 10px;
 	padding: 10px;
+	width: 245px;
+	text-align: center;
 }
 
 .menu div {
@@ -93,7 +95,8 @@ td {
 .username {
 	background-color: lightgray;
 	border: none;
-	font-weight:bold;
+	font-weight: bold;
+	width: 65px;
 }
 
 .register {
