--- a/style.css
+++ b/style.css
@@ -88,6 +88,23 @@ td {
 
 .main_table td:first-child {
   	text-align: left;
+  	width: 80px;
+}
+
+.maintable td:nth-child(2) {
+	width: 120px;
+}
+
+.maintable td:nth-child(3) {
+	width: 160px;
+}
+
+.maintable td:nth-child(4) {
+	width: 40px;
+}
+
+.maintable td:nth-child(5) {
+	width: 60px;
 }
 
 .status_bar {
