--- a/style.css
+++ b/style.css
@@ -94,12 +94,14 @@ td {
 }
 
 .main_table td {
-	border: solid 2px rgb(128, 128, 128);
+	border: solid 1px rgb(128, 128, 128);
 }
 
 .main_table td:first-child {
+	color: black;
   	text-align: left;
   	width: 80px;
+  	font-weight: bold;
 }
 
 .maintable td:nth-child(2) {
