--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ td {
 	margin-left: auto;
   	margin-right: auto;
   	margin-top: 20px;
-  	color: red;
+  	color: black;
 	padding-left: 10px;
   	font-weight: bold;
 }
