--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ td {
 	background-color: rgb(211, 211, 211);
 	border-collapse: separate;
 	border: solid 2px rgb(128, 128, 128);
-	line-height: normal;
+	line-height: 1.3;
 	width: 492px;
 	margin-left: auto;
   	margin-right: auto;
