--- a/style.css
+++ b/style.css
@@ -167,5 +167,5 @@ td {
 	-moz-transition: border-color 5s 0.2s ease;
 	-o-transition: border-color 5s 0.2s ease;
 	-webkit-transition: border-color 5s 0.2s ease;
-	border-color: red;
+	backgrount-color: red;
 }
