--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ td {
 	border: 1px solid red !important;
 }
 
-.forceTimeout {
+.forceTimeout font {
 	border: 1px solid red !important;
 	color: gray !important;
 }
