--- a/style.css
+++ b/style.css
@@ -170,7 +170,10 @@ td {
 	border: 1px solid red !important;
 }
 
-.forceTimeout font {
+.forceTimeout {
 	border: 1px solid red !important;
+}
+
+.forceTimeout font {
 	color: gray !important;
 }
