--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ td {
 	-webkit-border-horizontal-spacing: 2px;
 	-webkit-border-vertical-spacing: 2px;
 	background-color: rgb(211, 211, 211);
-	border-collapse: separate;
+	border-collapse: collapse;
 	border: solid 2px rgb(128, 128, 128);
 	line-height: 1.3;
 	width: 492px;
