--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ input {
 	border-collapse: collapse;
 	border: solid 2px rgb(128, 128, 128);
 	line-height: 1.3;
-	width: 492px;
+	width: 560px;
 	margin-left: auto;
   	margin-right: auto;
 }
@@ -107,26 +107,36 @@ input {
 }
 
 .main_table td:nth-child(2) {
-	width: 120px;
+	width: 140px;
 }
 
 .main_table td:nth-child(3) {
-	width: 120px;
+	width: 130px;
 }
 
 .main_table td:nth-child(4) {
-	width: 40px;
+	width: 46px;
 	text-decoration: none;
 	color: black;
 }
 
 .main_table td:nth-child(5) {
-	width: 47px;
+	width: 46px;
 	color: black;
 }
 
 .main_table td:nth-child(6) {
-	width: 45px;
+	width: 46px;
+	color: black;
+}
+
+.main_table td:nth-child(7) {
+	width: 46px;
+	color: black;
+}
+
+.main_table td:nth-child(8) {
+	width: 46px;
 	color: black;
 }
 
