--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ input {
 	border-collapse: collapse;
 	border: solid 2px rgb(128, 128, 128);
 	line-height: 1.3;
-	width: 570px;
+/*	width: 570px; */
 	margin-left: auto;
   	margin-right: auto;
 }
