--- a/style.css
+++ b/style.css
@@ -59,6 +59,15 @@ input {
 	text-align: left;
 }
 
+.menu input[type=checkbox] {
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  padding: 10px;
+}
+
 .menu_title {
 	text-align: center;
 	display: block;
