--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ input {
   -moz-transform: scale(2); /* FF */
   -webkit-transform: scale(2); /* Safari and Chrome */
   -o-transform: scale(2); /* Opera */
-  padding: 10px;
+  width: 90%;
 }
 
 .menu_title {
