--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ input {
 	-khtml-border-radius: 10px;
 	padding: 15px;
 	text-align: left;
+	width: 295px;
 }
 
 .menu input[type=checkbox] {
@@ -76,7 +77,7 @@ input {
 .menu div {
 	display: none;
 	text-align: right;
-	margin-left:  10px;
+	margin-left: 15px;
 }
 
 .menu a {
@@ -204,5 +205,5 @@ input {
 }
 
 .simple_div {
-	display: inline-block;
+	width: 250px;
 }
