--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ input {
   -moz-transform: scale(2); /* FF */
   -webkit-transform: scale(2); /* Safari and Chrome */
   -o-transform: scale(2); /* Opera */
-  width: 90%;
+  margin-left: 0px;
+  margin-top: 0px;
+  width: 10px;
+  height: 10px;
 }
 
 .menu_title {
@@ -205,5 +208,5 @@ input {
 }
 
 .simple_div {
-	width: 250px;
+	width: 225px;
 }
