--- a/style.css
+++ b/style.css
@@ -229,21 +229,21 @@ input {
 }
 
 #col3 {
-	left: 457px;
+	width: 46px;
 }
 
 #col4 {
-	left: 502px;
+	width: 46px;
 }
 
 #col5 {
-	left: 536px;
+	width: 46px;
 }
 
 #col6 {
-	left: 582px;
+	width: 46px;
 }
 
 #col7 {
-	left: 630px;
+	width: 46px;
 }
