--- a/style.css
+++ b/style.css
@@ -219,30 +219,30 @@ input {
 }
 
 #col1 {
-	width: 180px;
+	width: 13%;
 }
 
 #col2 {
 
-	width: 140px;
+	width: 10%;
 }
 
 #col3 {
-	width: 46px;
+	width: 3%;
 }
 
 #col4 {
-	width: 46px;
+	width: 2%;
 }
 
 #col5 {
-	width: 46px;
+	width: 3%;
 }
 
 #col6 {
-	width: 46px;
+	width: 3%;
 }
 
 #col7 {
-	width: 46px;
+	width: 3%;
 }
