--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input {
 }
 
 .main_table tbody tr:hover {
-    background-color: #f3bd48;
+    background-color: darkgray;
 }
 
 .main_table a {
