--- a/style.css
+++ b/style.css
@@ -255,7 +255,10 @@ input {
 }
 
 .messagebox {
+	position: fixed;
 	display: none;
+	left: 40%;
+	top: 40%;
 	width: 200px;
 	height: 100px;
 	background-color: lightgray;
