--- a/style.css
+++ b/style.css
@@ -274,12 +274,9 @@ input {
     position:relative;
     top:80px;
 }
-.box {
-    width:70%;
-    height:200px;
-    background:#FFF;
+/*.box {
     margin:40px auto;
-}
+}*/
  
 /*==================================================
  * Effect 2
