--- a/style.css
+++ b/style.css
@@ -274,9 +274,12 @@ input {
     position:relative;
     top:80px;
 }
-/*.box {
+.box {
+    width:70%;
+    height:200px;
+    background:#FFF;
     margin:40px auto;
-}*/
+}
  
 /*==================================================
  * Effect 2
