--- a/style.css
+++ b/style.css
@@ -267,11 +267,11 @@ input {
 	padding-left: 10px;
 }
 
-.box h3{
+/*.box h3{
     text-align:center;
     position:relative;
     top:80px;
-}
+}*/
 .box {
     width:70%;
     height:200px;
