--- a/style.css
+++ b/style.css
@@ -11,12 +11,20 @@ input {
 	background-color: rgb(211, 211, 211);
 }
 
-a {
-	text-decoration: none;
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
 }
 
 a:hover {
-	text-decoration: none !important;
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
 }
 
 .title {
