--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
 	background-color: black;
 	width: 630px;
+	margin-left: auto;
+  	margin-right: auto;
+
 }
 
 td {
@@ -58,6 +61,7 @@ a:active {
 .left_button {
 	position: fixed;
 	top: 20px;
+	left: 0px;
 }
 
 .menu {
