--- a/style.css
+++ b/style.css
@@ -134,42 +134,58 @@ a:active {
 
 .main_table td:first-child {
   	text-align: left;
-  	width: 72px;
+  	/*width: 72px;*/
   	color: black;
   	padding-left: 2px;
+  	padding-left: 5px;
+    padding-right: 5px;
 }
 
 .la {
-	width: 180px;
+	/*width: 180px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 }
 
 .rep {
-	width: 145px;
+	/*width: 145px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 }
 
 .loc {
-	width: 60px;
+	/*width: 60px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 	text-decoration: none;
 	color: black;
 }
 
 .500 {
-	width: 50px;
+	/*width: 50px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 	color: black;
 }
 
 .el {
-	width: 46px;
+	/*width: 46px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 	color: black;
 }
 
 .mon {
-	width: 46px;
+	/*width: 46px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 	color: black;
 }
 
 .red {
-	width: 46px;
+	/*width: 46px;*/
+	padding-left: 5px;
+    padding-right: 5px;
 	color: black;
 }
 
