--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 		padding-top: 40px;
 	}
 	.left_button {
-		display: none;
+		position: fixed;
+		top: 0px !important;
+		left: 50px !important;
 	}
 }
 
