--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 	.left_button3 {
 		position: fixed;
 		top: -3px !important;
-		left: 70px !important;
+		left: 81px !important;
 	}
 }
 
@@ -92,7 +92,7 @@ a:active {
     -webkit-border-radius: 3px;
     -khtml-border-radius: 3px;
     border-radius: 3px;
-    /*text-align: right;*/
+    text-align: center;
 }
 
 .left_button img {
@@ -118,7 +118,7 @@ a:active {
     -webkit-border-radius: 3px;
     -khtml-border-radius: 3px;
     border-radius: 3px;
-    /*text-align: right;*/
+    text-align: center;
 }
 
 .left_button3 img {
