--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-device-width: 414px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
 	body {
 		width: 90%;
 		font-size: 11px;
