--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   and (-webkit-min-device-pixel-ratio: 3)
   and (orientation: portrait) {
 	body {
-		width: 90%;
-		font-size: 7px;
+		width: 99%;
+		font-size: 9px;
 		padding-top: 20px;
 	}
 	.left_button {
@@ -22,6 +22,9 @@
 		position: fixed;
 		top: -3px !important;
 		left: 81px !important;
+	}
+	.main_table {
+		width:100%;
 	}
 }
 
