--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* iPhone 6+ */
 @media only screen 
   and (min-device-width: 414px) 
   and (max-device-width: 736px) 
@@ -28,6 +29,38 @@
 	}
 }
 
+/* iPhone 6 */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+	body {
+		width: 99%;
+		font-size: 8px;
+		padding-top: 30px;
+	}
+	.left_button {
+		position: fixed;
+		top: -3px !important;
+		left: 30px !important;
+	}
+	.left_button2 {
+		position: fixed;
+		top: 2px !important;
+		left: 55px !important;
+	}
+	.left_button3 {
+		position: fixed;
+		top: -3px !important;
+		left: 81px !important;
+	}
+	.main_table {
+		width:100%;
+	}
+}
+
+/* iPhone 5 and 5s */
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
@@ -36,6 +69,37 @@
   	body {
 		width: 99%;
 		font-size: 6px;
+		padding-top: 30px;
+	}
+	.left_button {
+		position: fixed;
+		top: -3px !important;
+		left: 30px !important;
+	}
+	.left_button2 {
+		position: fixed;
+		top: 2px !important;
+		left: 55px !important;
+	}
+	.left_button3 {
+		position: fixed;
+		top: -3px !important;
+		left: 81px !important;
+	}
+	.main_table {
+		width:100%;
+	}
+}
+
+/* Galaxy S5 */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: portrait) {
+  	body {
+		width: 99%;
+		font-size: 7px;
 		padding-top: 30px;
 	}
 	.left_button {
