--- a/style.css
+++ b/style.css
@@ -104,23 +104,37 @@
 	}
 	.left_button {
 		position: fixed;
-		top: -3px !important;
-		left: 30px !important;
+		top: -3px;
+		left: 30px;
 	}
 	.left_button2 {
 		position: fixed;
-		top: 2px !important;
-		left: 55px !important;
+		top: 2px;
+		left: 55px;
 	}
 	.left_button3 {
 		position: fixed;
-		top: -3px !important;
-		left: 81px !important;
+		top: -3px;
+		left: 81px;
 	}
 	.main_table {
 		width:100%;
 	}
 }
+/* Desktops */
+@media (min-width:1025px) {
+	.left_button {
+		top: 20px;
+		left: -3px;
+	}
+	.left_button2 {
+		top: 45px;
+		left: 0px;
+	}
+	.left_button3 {
+		top: 70px;
+		left: -3px;
+	}
 
 body {
 	background-color: black;
@@ -182,8 +196,6 @@ a:active {
 
 .left_button {
 	position: fixed;
-	top: 20px;
-	left: -3px;
 	width: 20px;
  	height: 20px;
  	color: black;
@@ -202,14 +214,10 @@ a:active {
 
 .left_button2 {
 	position: fixed;
-	top: 45px;
-	left: 0px;
 }
 
 .left_button3 {
 	position: fixed;
-	top: 70px;
-	left: -3px;
 	width: 20px;
  	height: 20px;
  	color: black;
