--- a/style.css
+++ b/style.css
@@ -11,18 +11,18 @@
 	}
 	.left_button {
 		position: fixed;
-		top: -3px !important;
-		left: 30px !important;
+		top: -3px;
+		left: 30px;
 	}
 	.left_button2 {
 		position: fixed;
-		top: 2px !important;
-		left: 55px !important;
+		top: 2px;
+		left: 55px;
 	}
 	.left_button3 {
 		position: fixed;
-		top: -3px !important;
-		left: 81px !important;
+		top: -3px;
+		left: 81px;
 	}
 	.main_table {
 		width:100%;
@@ -42,18 +42,18 @@
 	}
 	.left_button {
 		position: fixed;
-		top: -3px !important;
-		left: 30px !important;
+		top: -3px;
+		left: 30px;
 	}
 	.left_button2 {
 		position: fixed;
-		top: 2px !important;
-		left: 55px !important;
+		top: 2px;
+		left: 55px;
 	}
 	.left_button3 {
 		position: fixed;
-		top: -3px !important;
-		left: 81px !important;
+		top: -3px;
+		left: 81px;
 	}
 	.main_table {
 		width:100%;
@@ -73,18 +73,18 @@
 	}
 	.left_button {
 		position: fixed;
-		top: -3px !important;
-		left: 30px !important;
+		top: -3px;
+		left: 30px;
 	}
 	.left_button2 {
 		position: fixed;
-		top: 2px !important;
-		left: 55px !important;
+		top: 2px;
+		left: 55px;
 	}
 	.left_button3 {
 		position: fixed;
-		top: -3px !important;
-		left: 81px !important;
+		top: -3px;
+		left: 81px;
 	}
 	.main_table {
 		width:100%;
@@ -135,6 +135,7 @@
 		top: 70px;
 		left: -3px;
 	}
+}
 
 body {
 	background-color: black;
