--- a/style.css
+++ b/style.css
@@ -199,6 +199,8 @@ a:active {
 	position: fixed;
 	width: 20px;
  	height: 20px;
+	top: 20px;
+	left: -3px;
  	color: black;
  	background: rgb(255, 255, 255);
  	-moz-border-radius: 3px;
@@ -215,12 +217,14 @@ a:active {
 
 .left_button2 {
 	position: fixed;
+	top: 45px;
+	left: 0px;
 }
 
 .left_button3 {
 	position: fixed;
-	width: 20px;
- 	height: 20px;
+	top: 70px;
+	left: -3px;
  	color: black;
  	background: rgb(255, 255, 255);
  	-moz-border-radius: 3px;
