--- a/style.css
+++ b/style.css
@@ -199,8 +199,6 @@ a:active {
 	position: fixed;
 	width: 20px;
  	height: 20px;
-	top: 20px;
-	left: -3px;
  	color: black;
  	background: rgb(255, 255, 255);
  	-moz-border-radius: 3px;
@@ -217,14 +215,12 @@ a:active {
 
 .left_button2 {
 	position: fixed;
-	top: 45px;
-	left: 0px;
 }
 
 .left_button3 {
 	position: fixed;
-	top: 70px;
-	left: -3px;
+	width: 20px;
+ 	height: 20px;
  	color: black;
  	background: rgb(255, 255, 255);
  	-moz-border-radius: 3px;
