--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 		position: fixed;
 		top: -3px;
 		left: 30px;
-		width: 40px;
-		height: 40px;
+		width: 40px !important;
+		height: 40px !important;
 	}
 	.left_button2 {
 		position: fixed;
