--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 		position: fixed;
 		top: 2px;
 		left: 75px;
+		font-size: 20px;
 	}
 	.left_button3 {
 		position: fixed;
@@ -82,6 +83,7 @@
 	.left_button2 {
 		top: 45px;
 		left: 0px;
+		font-size: 10px;
 	}
 	.left_button3 {
 		top: 70px;
