--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@
 	.main_table {
 		width:100%;
 	}
+	.main_table td {
+	  	padding-left: 1px;
+	    padding-right: 1px;
+	}
 }
 
 /* iPhone 6+ */
@@ -264,7 +268,6 @@ a:active {
   	text-align: left;
   	/*width: 72px;*/
   	color: black;
-  	padding-left: 2px;
   	padding-left: 5px;
     padding-right: 5px;
 }
