--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
 		width:100%;
 	}
 	.main_table td {
-	  	padding-left: 1px;
-	    padding-right: 1px;
+	  	padding-left: 1px !important;
+	    padding-right: 1px !important;
 	}
 }
 
