--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@
 }
 
 /* All desktops */
-@media all and (not handheld) {
+@media only screen 
+  and (orientation : landscape)
+  and (max-width: 1024px) {
 	.left_button {
 		top: 20px;
 		left: -3px;
