--- a/style.css
+++ b/style.css
@@ -60,13 +60,19 @@
 
 /* All desktops */
 @media only screen
-  and (max-width: 1024px) {
+  and (orientation: landscape) {
 	.left_button {
+		top: 20px;
+		left: -3px;
 	}
 	.left_button2 {
+		top: 45px;
+		left: 0px;
+		font-size: 13px;
 	}
 	.left_button3 {
-
+		top: 70px;
+		left: -3px;
 	}
 }
 
@@ -139,8 +145,6 @@ a:active {
     -khtml-border-radius: 3px;
     border-radius: 3px;
     text-align: center;
-    top: 20px;
-	left: -3px;
 }
 
 .left_button img {
@@ -150,9 +154,6 @@ a:active {
 
 .left_button2 {
 	position: fixed;
-	top: 45px;
-	left: 0px;
-	font-size: 13px;
 }
 
 .left_button3 {
@@ -166,8 +167,6 @@ a:active {
     -khtml-border-radius: 3px;
     border-radius: 3px;
     text-align: center;
-    top: 70px;
-	left: -3px;
 }
 
 .left_button3 img {
