--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*@media only screen 
+@media only screen 
   and (max-device-width: 320px)
   and (orientation: portrait) {
   	body {
@@ -20,7 +20,7 @@
   	body {
  		font-size: 9px;
  	}
-}*/
+}*
 
 /* All mobiles */
 @media only screen 
