--- a/style.css
+++ b/style.css
@@ -15,13 +15,21 @@
 }
 @media only screen 
   and (min-device-width: 350px)
-  and (max-device-width: 390px)
+  and (max-device-width: 381px)
   and (orientation: portrait) {
   	body {
  		font-size: 9px;
  	}
 }
 
+@media only screen 
+  and (min-device-width: 380px)
+  and (max-device-width: 414px)
+  and (orientation: portrait) {
+  	body {
+ 		font-size: 10px;
+ 	}
+}
 /* All mobiles */
 @media only screen 
   and (max-device-width: 414px)
