--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @media only screen 
+  and (max-device-width: 1px)
   and (max-device-width: 321px)
   and (orientation: portrait) {
   	body {
@@ -6,7 +7,7 @@
  	}
 }
 @media only screen 
-  and (min-device-width: 321px)
+  and (min-device-width: 320px)
   and (max-device-width: 351px)
   and (orientation: portrait) {
   	body {
@@ -14,7 +15,7 @@
  	}
 }
 @media only screen 
-  and (min-device-width: 351px)
+  and (min-device-width: 350px)
   and (max-device-width: 381px)
   and (orientation: portrait) {
   	body {
