--- a/style.css
+++ b/style.css
@@ -63,10 +63,8 @@
 
 
 /* All desktops */
-@media not only screen 
-  and (min-device-width: 0px)
-  and (max-device-width: 414px)
-  and (orientation: portrait) {
+@media only screen
+  and (min-device-width: 414px) {
 	.left_button {
 		top: 20px;
 		left: -3px;
