--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   and (min-device-width: 0px)
   and (max-device-width: 321px)
   and (orientation: portrait) {
-  	body {
+  	.main_table {
  		font-size: 7px;
  	}
 }
@@ -10,7 +10,7 @@
   and (min-device-width: 320px)
   and (max-device-width: 351px)
   and (orientation: portrait) {
-  	body {
+  	.main_table {
  		font-size: 8px;
  	}
 }
@@ -18,7 +18,7 @@
   and (min-device-width: 350px)
   and (max-device-width: 391px)
   and (orientation: portrait) {
-  	body {
+  	.main_table {
  		font-size: 9px;
  	}
 }
