--- a/style.css
+++ b/style.css
@@ -152,6 +152,9 @@ a:active {
 .left_button img {
 	max-width: 85%;
 	max-height: 85%;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .left_button2 {
@@ -174,7 +177,9 @@ a:active {
 .left_button3 img {
 	max-width: 82%;
 	max-height: 82%;
-	vertical-align: sub;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .menu {
