--- a/style.css
+++ b/style.css
@@ -159,6 +159,15 @@ a:active {
 
 .left_button2 {
 	position: fixed;
+	width: 40px;
+ 	height: 40px;
+ 	color: black;
+ 	background: rgb(255, 255, 255);
+ 	-moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    border-radius: 3px;
+    text-align: center;
 }
 
 .left_button3 {
