--- a/style.css
+++ b/style.css
@@ -506,9 +506,10 @@ a:active {
 
 #logo {
 	position: absolute;
-	left: 90%;
-	top: 10px;
+	left: 80%;
+	top: 60px;
 	-webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+    z-index: -1;
 }
