--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   and (min-device-width: 0px)
   and (max-device-width: 321px)
   and (orientation: portrait) {
-  	.main_table {
+  	.body {
  		font-size: 7px;
  	}
 }
@@ -10,7 +10,7 @@
   and (min-device-width: 320px)
   and (max-device-width: 351px)
   and (orientation: portrait) {
-  	.main_table {
+  	.body {
  		font-size: 8px;
  	}
 }
@@ -18,7 +18,7 @@
   and (min-device-width: 350px)
   and (max-device-width: 391px)
   and (orientation: portrait) {
-  	.main_table {
+  	.body {
  		font-size: 9px;
  	}
 }
@@ -64,8 +64,13 @@
 	    z-index: -1;
 	}
 	#logo_text {
-		left: 0px;
-		top: 0px;
+		position: absolute;
+	    left: 109px;
+	    top: 0px;
+	    width: 160px;
+	    height: 50px;
+	    color: rgb(255, 255, 255);
+	    text-align: center;
 	}
 }
 
