--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@
 	    top: 0px;
 	    width: 160px;
 	    height: 50px;
+	    background-color: black;
 	    color: rgb(255, 255, 255);
 	    text-align: center;
 	}
