--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@
 	    background-color: black;
 	    color: rgb(255, 255, 255);
 	    text-align: center;
-
+	    border: double 1px rgb(255, 255, 255);
+		border-radius: 5px;
 	}
 }
 
