--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
 	    left: 109px;
 	    top: 0px;
 	    width: 165px;
-	    height: 120px;
+	    /*height: 120px;*/
 	    background-color: black;
 	    color: rgb(255, 255, 255);
 	    text-align: center;
