--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@
 	    text-align: center;
 	    border: double 1px rgb(255, 255, 255);
 		border-radius: 5px;
+		padding: 2px;
 	}
 }
 
@@ -98,13 +99,13 @@
 	}
 	#logo img{
 	    z-index: -1;
+	    position: absolute;
 	}
-
 	#logo_text {
 		display: none;
 		position: absolute;
-	    left: 109px;
-	    top: 0px;
+	    left: 147px;
+	    top: -202%;
 	    width: 165px;
 	    background-color: black;
 	    color: rgb(255, 255, 255);
@@ -114,8 +115,9 @@
 		-webkit-transform: rotate(-90deg);
 	    -ms-transform: rotate(-90deg);
 	    transform: rotate(-90deg);
+	    padding: 2px;
 	}
-	
+
 	.left_button {
 		top: 30px;
 		left: -3px;
