--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@
 	div#logo_text {
 		display: none;
 		position: absolute;
-	    left: 147px;
-	    top: -200%;
+	    left: 200px;
+	    top: 65px;
 	    width: 165px;
 	    background-color: black;
 	    color: rgb(255, 255, 255);
