--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ a:active {
     -khtml-border-radius: 3px;
     border-radius: 3px;
     text-align: center;
+    z-index: 15;
 }
 
 .left_button img {
@@ -187,6 +188,7 @@ a:active {
     -khtml-border-radius: 3px;
     border-radius: 3px;
     text-align: center;
+    z-index: 15;
 }
 
 .left_button3 {
