--- a/style.css
+++ b/style.css
@@ -422,32 +422,39 @@ a:active {
 }
 
 #col1 {
-	width: 13%;
+	width: 2%;
+	top: 1px;
 }
 
 #col2 {
 
-	width: 10%;
+	width: 2%;
+	top: 1px;
 }
 
 #col3 {
-	width: 3%;
+	width: 2%;
+	top: 1px;
 }
 
 #col4 {
 	width: 2%;
+	top: 1px;
 }
 
 #col5 {
-	width: 3%;
+	width: 2%;
+	top: 1px;
 }
 
 #col6 {
-	width: 3%;
+	width: 2%;
+	top: 1px;
 }
 
 #col7 {
-	width: 3%;
+	width: 2%;
+	top: 1px;
 }
 
 .messagebox {
