--- a/style.css
+++ b/style.css
@@ -64,25 +64,25 @@
 	    z-index: 1;
 	}
 	#col1 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col2 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col3 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col4 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col5 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col6 {
-		top: 40px;
+		top: 40px !important;
 	}
 	#col7 {
-		top: 40px;
+		top: 40px !important;
 	}						 
 }
 
