--- a/style.css
+++ b/style.css
@@ -328,6 +328,12 @@ a:active {
     padding-right: 5px;
 }
 
+.rep select {
+	border: 0px;
+    outline: 0px;
+    background: inherit;
+}
+
 .loc {
 	/*width: 60px;*/
 	padding-left: 5px;
