--- a/style.css
+++ b/style.css
@@ -38,15 +38,15 @@
   		width: 99%;
  		padding-top: 40px;
  	}
-	.left_button {
+	#left_button {
 		top: -3px;
 		left: 30px;
 	}
-	.left_button2 {
+	#left_button2 {
 		top: -3px;
 		left: 78px;
 	}
-	.left_button3 {
+	#left_button3 {
 		top: -3px;
 		left: 125px;
 	}
@@ -102,16 +102,16 @@
 	    transform: rotate(90deg);
 	}
 
-	.left_button {
+	#left_button {
 		top: 30px;
 		left: -3px;
 	}
-	.left_button2 {
+	#left_button2 {
 		top: 78px;
 		left: -3px;
 		font-size: 18px;
 	}
-	.left_button3 {
+	#left_button3 {
 		top: 125px;
 		left: -3px;
 	}
