--- a/style.css
+++ b/style.css
@@ -547,8 +547,11 @@ a:active {
 	z-index: 25;
 }
 
-.fade {
+.fading {
 	position: fixed;
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 11;
+    opacity: 0.5;
 }
