--- a/style.css
+++ b/style.css
@@ -551,6 +551,8 @@ a:active {
 	position: fixed;
     width: 100%;
     height: 100%;
+    left: 0px;
+    top: 0px;
     background-color: black;
     opacity: 0.5;
 }
